--- a/chat/client/package.json
+++ b/chat/client/package.json
@@ -9,11 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^7.0.1",
+    "ant-design-vue": "^4.1.0",
+    "axios": "^1.6.5",
     "vue": "^3.3.11"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
     "typescript": "^5.2.2",
+    "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.8",
     "vue-tsc": "^1.8.25"
   }
